fixing hacklahoma modal on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -422,7 +422,6 @@ p.item-info
   margin-top: -15px;
   width: 90%;
   max-width: 950px;
-
   object-position: center;
   margin-left: 5%;
   border-radius: 5px;
@@ -432,8 +431,10 @@ p.item-info
 #hacklahoma19
 {
   border: 1px solid #aaa;
-  margin-left: calc(50% - 500px);
+  /* margin-left: calc(50% - 500px);  old */
   margin-top: 5px;
+  width: 84%; /* new */
+  margin-left: 8%; /* new */
 }
 
 /* ---------- */
